--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    Üdvözlet a weboldalamon!
+    Üdvözlet a weboldalamon, hamarosan érkezik rá tartalom is!
 </body>
 </html>
