Create cv.html and update index.html

--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     Üdvözlet a weboldalamon, hamarosan érkezik rá tartalom is!
+    <p><a href="cv.html">Megnézem a cv.html oldalt!</a></p>
 </body>
 </html>
