Create cv2.html, cv2.css and update index.html

--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -7,5 +7,6 @@
 <body>
     Üdvözlet a weboldalamon, hamarosan érkezik rá tartalom is!
     <p><a href="cv.html">Megnézem a cv.html oldalt!</a></p>
+    <p><a href="cv2.html">Megnézem a cv2.html oldalt!</a></p>
 </body>
 </html>
