--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -8,5 +8,6 @@
     Üdvözlet a weboldalamon, hamarosan érkezik rá tartalom is!
     <p><a href="cv.html">Megnézem a cv.html oldalt!</a></p>
     <p><a href="cv2.html">Megnézem a cv2.html oldalt!</a></p>
+    <p><a href="hajo.html">Megnézem a hajo.html oldalt!</a></p>
 </body>
 </html>
