--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -9,5 +9,6 @@
     <p><a href="cv.html">Megnézem a cv.html oldalt!</a></p>
     <p><a href="cv2.html">Megnézem a cv2.html oldalt!</a></p>
     <p><a href="hajo.html">Megnézem a hajo.html oldalt!</a></p>
+    <p><a href="jsgyak.html">Megnézem a jsgyak.html oldalt!</a></p>
 </body>
 </html>
