Create hetedik.js, questions.json and update hajo.html

--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hajós vizsga</title>
     <link rel="stylesheet" href="hajo.css">
+    <script src="hetedik.js"></script>
 </head>
 <body>
     <div id="külső">
@@ -14,17 +15,17 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattinthato">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattinthato">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattinthato">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattinthato" onclick="megjelöltVálasz1()">Válasz 1</div>
+                <div id="válasz2" class="kerdes kattinthato" onclick="megjelöltVálasz2()">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattinthato" onclick="megjelöltVálasz3()">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" alt="A kérdéshez tartozó kép">
             </div>
         </div>
         <div id="vezérlő">
-            <div class="gomb kattinthato">Vissza</div>
-            <div class="gomb kattinthato">Előre</div>
+            <div class="gomb kattinthato" onclick="kattVissza()">Vissza</div>
+            <div class="gomb kattinthato" onclick="kattElore()">Előre</div>
         </div>
     </div>
 </body>
