--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -15,9 +15,9 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattinthato" onclick="megjelöltVálasz1()">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattinthato" onclick="megjelöltVálasz2()">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattinthato" onclick="megjelöltVálasz3()">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattinthato" onclick="választás(1)">Válasz 1</div>
+                <div id="válasz2" class="kerdes kattinthato" onclick="választás(2)">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattinthato" onclick="választás(3)">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" alt="A kérdéshez tartozó kép">
