Create jokes.html, JokeController.cs and update index.html

--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -10,5 +10,6 @@
     <p><a href="cv2.html">Megnézem a cv2.html oldalt!</a></p>
     <p><a href="hajo.html">Megnézem a hajo.html oldalt!</a></p>
     <p><a href="jsgyak.html">Megnézem a jsgyak.html oldalt!</a></p>
+    <p><a href="jokes.html">Megnézem a jokes.html oldalt!</a></p>
 </body>
 </html>
