Probalkozas viccek kilistazasara a jokes.html-ben

--- a/HajosTeszt/HajosTeszt/wwwroot/jokes.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/jokes.html
@@ -36,7 +36,15 @@
                         alert("Kudarc");
                     }
                 });
+         
         })
+
+        //window.onload = function showJokes(j) {
+        //    for (let i = 0; i < j.length; i++) {
+        //        let vicc = document.createElement("div");
+        //        vicc.innerHTML = j[i].jokeText;
+        //        document.getElementById("jokeList").appendChild(vicc);
+        //    }
     </script>
 </body>
 </html>
